# snap-micro-services

./: .gitignore  README.md  docker-compose.yml
auth-server/: Dockerfile  README.md  auth-server.cabal  deps.sh  docker-compose.yml
auth-server/src/: Application.hs  Site.hs
